--- a/scss/all.scss
+++ b/scss/all.scss
@@ -40,20 +40,6 @@
       font-size: 2rem;
     }
 
-    span {
-      // display: block;
-
-      // &:first-of-type {
-      //   animation: fontSlideY 1s cubic-bezier(.74, -0.23, .4, .88);
-      //   animation-fill-mode: forwards;
-      // }
-
-      // &:nth-of-type(2) {
-      //   animation: fontSlideY2 1s cubic-bezier(.74, -0.23, .4, .88);
-      //   animation-fill-mode: forwards;
-      // }
-    }
-
     .block-reveal {
       --t: calc(var(--td) + var(--d));
       color: transparent;
@@ -150,16 +136,10 @@
   }
 }
 
-//for index landing animation
+//for homepage landing animation
 .start-scroll {
   .landing {
     opacity: 0.1;
-
-    .landing-page {
-      // transform: translate3d(0, -100%, 0);
-      // transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
-      // transform-origin: top center;
-    }
 
     h1 {
       animation: opacityR 0.8s cubic-bezier(.74, -0.23, .4, .88);
@@ -619,55 +599,6 @@
 
   100% {
     transform: translateY(8px);
-    opacity: 0.3;
-  }
-}
-
-@keyframes fontSlideY {
-  0% {
-    transform: translateY(-150px);
-    opacity: 0.3;
-  }
-
-  100% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-}
-
-@keyframes fontSlideY2 {
-  0% {
-    transform: translateY(150px);
-    opacity: 0.3;
-  }
-
-  100% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-}
-
-@keyframes fontSlideYR {
-  0% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-
-  100% {
-
-    transform: translateY(-150px);
-    opacity: 0.3;
-  }
-}
-
-@keyframes fontSlideY2R {
-  0% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateY(150px);
     opacity: 0.3;
   }
 }
