--- a/css/global.css
+++ b/css/global.css
@@ -251,13 +251,15 @@ button::-moz-focus-inner,
 [type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
+  box-shadow: 0 0 2px 2px rgba(129, 129, 129, 0.337254902);
 }
 
 button:-moz-focusring,
 [type=button]:-moz-focusring,
 [type=reset]:-moz-focusring,
 [type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+  outline: 0px dotted ButtonText;
+  box-shadow: 0 0 2px 2px rgba(129, 129, 129, 0.337254902);
 }
 
 fieldset {
@@ -355,6 +357,10 @@ li {
 /* other share */
 :focus {
   outline-width: 0px;
+}
+
+:-moz-focusring {
+  outline: 2px dotted rgba(129, 129, 129, 0.337254902);
 }
 
 input:focus, select:focus {
