--- a/scss/global.scss
+++ b/scss/global.scss
@@ -367,7 +367,7 @@ input:-internal-autofill-selected{
 }
 
 .l-font {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 
 .material-icons {
@@ -975,6 +975,7 @@ nav {
       @extend %weight300;
       display: block;
       color: v.$font-secondary;
+      line-height: 1.3;
     }
   }
 
@@ -983,7 +984,7 @@ nav {
     padding: 2px 10px;
     display: inline-block;
     color: v.$secondary;
-    @extend %weight400;
+    @extend %weight600;
   }
 
   .section {
@@ -1088,6 +1089,13 @@ nav {
 
       .row-4 {
         @include v.row-width(40%);
+        @include v.pad-width {
+          flex-basis: 100%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 100%;
+        }
       }
 
       .row-7 {
@@ -1106,6 +1114,15 @@ nav {
 
       .row-6 {
         @include v.row-width(60%);
+        @include v.pad-width {
+          flex-basis: 100%;
+          width: 100%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 100%;
+          width: 100%;
+        }
       }
 
       .row-5 {
@@ -1135,7 +1152,7 @@ nav {
 
     .actions {
       display: inline-flex;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
 
       .actions-btn {
         border-radius: 5px;
