--- a/css/all.css
+++ b/css/all.css
@@ -1,4 +1,4 @@
-.movie-item .up-date, .movie-item .list-item > div span, .introduction {
+.introduction {
   font-weight: 300;
 }
 
@@ -321,6 +321,7 @@
   margin-bottom: 15px;
 }
 .movie-item .list-item > div span {
+  font-weight: normal;
   border-left: 1px solid #fff;
   padding-left: 10px;
   margin-left: 10px;
@@ -391,6 +392,9 @@
 }
 .booking-history .ticket-no span {
   margin-left: 5px;
+}
+.booking-history .movie-title {
+  width: 80%;
 }
 .booking-history .movie-title p {
   color: #00ABF2;
@@ -616,9 +620,9 @@
   display: -ms-flexbox;
   display: flex;
   text-align: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   color: #fff;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -630,6 +634,10 @@
   border-radius: 5px;
   cursor: pointer;
   margin-bottom: 15px;
+  margin-right: 13px;
+}
+.booking .timetable .time:nth-of-type(5n) {
+  margin-right: 0;
 }
 .booking .timetable .time.active {
   color: #000;
